Refactorings for Java 11 compatibility, README and pom improvements