@@ -2,6 +2,7 @@ package io.github.tnas.qsplitter.dao;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import java.util.stream.Collectors;
 import java.util.stream.LongStream;
 
 import javax.persistence.metamodel.SingularAttribute;
@@ -9,7 +10,6 @@ import javax.persistence.metamodel.SingularAttribute;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import io.github.tnas.qsplitter.TableRelationship;
 import io.github.tnas.qsplitter.model.User;
 import io.github.tnas.qsplitter.model.UserId;
 import io.github.tnas.qsplitter.model.User_;
@@ -35,7 +35,7 @@ class TempTableDaoTest extends QSplitterDaoTest<TableRelationship<UserId, Long, 
 	@Override
 	@Test
 	void shouldSelectAmongFirst10KUsersFromNepal() {
-		var ids = LongStream.rangeClosed(1, TOTAL_RECORDS).boxed().toList();
+		var ids = LongStream.rangeClosed(1, TOTAL_RECORDS).boxed().collect(Collectors.toList());
 		this.query.where(builder.equal(root.get(User_.country), "Nepal"));
 		var tempRelation = new TableRelationship<>(UserId.class, Long.class, User_.replicatedId);
 		var entities = this.qSplitterDao.select(ids, query, tempRelation);
